@@ -233,3 +233,6 @@ Several build profiles are understood and supported:
 - nodoc: Exclude most documentation
 - pkg.linux.notools: Exclude userland tool packages (linux-kbuild-<version>,
   linux-perf-<version>, etc.)
+- cross: Needed when cross-building.  Currently this must be used
+  together with pkg.linux.notools as not all the userland tools can be
+  cross-built.
