@@ -20,14 +20,14 @@ Build-Depends:
 # used by upstream to build include/generated/timeconst.h
  bc <!stage1>,
 # used by upstream to build signing tools and to process certificates
- libssl-dev <!stage1>,
- openssl <!stage1>,
+ libssl-dev:native <!stage1>, libssl-dev <!stage1 !pkg.linux.notools cross>,
+ openssl:native <!stage1>,
 # used by upstream to build perf documentation
  asciidoc <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
 # used by upstream to build perf
  bison <!stage1 !pkg.linux.notools>,
- flex <!stage1 !pkg.linux.notools>,
+ flex:native <!stage1 !pkg.linux.notools>,
  gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools>,
  libaudit-dev <!stage1 !pkg.linux.notools>,
  libdw-dev <!stage1 !pkg.linux.notools>,
